--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
   <head>
-    <tittle> </tittle>
+    <tittle> bienvenido al nuevo motel </tittle>
   </head>
+  <body>
+    
+  </body>
+</html>
