--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <tittle> bienvenido al nuevo motel </tittle>
   </head>
   <body>
+    <div> <h1> menu</h1>
+    <h2> opcion1 </h2>
+    </div> 
     
   </body>
 </html>
