--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <html>
   <head>
     <tittle> bienvenido al nuevo motel </tittle>
+    <link rel="stylesheet"href="stilos.css">
   </head>
   <body>
-    <div> <h1> menu</h1>
-    <h2> opcion1 </h2>
-    </div> 
+      <h1> pagina principal</h1>
+      <div id="cuerpo_principal">
+        <div>
+          encabezado
+        </div>
+        <div>
+          cuerpo
+        </div>
+        <div>
+          pie de pagina
+        </div>
+      </div>
+    
     
   </body>
 </html>
